# lake_boundaries

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/docks/: fernan_lake_cv.geojson  hauser_lake_cv.geojson  hayden_osm_docks.geojson  lake_hayden_cv.geojson  spirit_lake_cv.geojson  twin_lakes_cv.geojson
docs/: DATA_SOURCES.md  index.html
docs/data/: anderson_lake.json  black_lake.json  blue_lake.json  cave_lake.json  coeur_dalene_lake.json  fernan_lake.json  hauser_lake.json  killarney_lake.json  lake_hayden.json  manifest.json  medicine_lake.json  rose_lake.json  spirit_lake.json  swan_lake.json  thompson_lake.json  twin_lakes.json
scripts/: extract_docks.py  fetch_data.py  shoreline_check.py  validate_digitize.py
src/lakezones/: __init__.py  cli.py  config.py  data.py  depth.py  depth_sources.py  digitize.py  docks.py  lakes.py  render.py  validate.py  vectorize.py  web_export.py  zones.py
