[project]
name = "lakezones"
version = "0.1.0"
description = "Deterministic lake depth/distance zone analysis for Kootenai County, Idaho"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.0",
    "rasterio>=1.4",
    "shapely>=2.0",
    "scipy>=1.12",
    "scikit-image>=0.24",
    "matplotlib>=3.8",
    "pyproj>=3.6",
    "pyogrio>=0.9",
    "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
